Change postions, fix size, especially on mobile version

--- a/src/app/trianglifier/form-wrapper/canvas/canvas.component.scss
+++ b/src/app/trianglifier/form-wrapper/canvas/canvas.component.scss
@@ -6,5 +6,12 @@
   height: auto;
   width: auto;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 40vh;
+}
+
+
+@media screen and (min-width: 800px) {
+  .canvas {
+    max-height: 100%;
+  }
 }
