--- a/src/app/trianglifier/form-wrapper/form-wrapper.component.scss
+++ b/src/app/trianglifier/form-wrapper/form-wrapper.component.scss
@@ -5,16 +5,16 @@
 
 .menu {
   display: flex;
-  width: 30%;
+  flex: 1;
   flex-direction: column;
   padding: 20px;
-  overflow: auto;
   box-shadow: 2px 0 8px 0 rgba(0,0,0,0.54);
+  min-width: 250px;
 }
 
 .main {
   display: flex;
-  width: 70%;
+  flex: 1;
   padding: 20px;
   flex-direction: column;
   align-items: center;
@@ -23,7 +23,9 @@
 
 .wrapper {
   display: flex;
+  flex-direction: column;
   max-height: calc(100vh - 64px);
+  overflow: auto;
 }
 
 .colors {
@@ -49,6 +51,19 @@
 .input {
   margin-right: 20px;
   margin-bottom: 10px;
+  max-width: 140px;
 }
 
-
+@media screen and (min-width: 800px) {
+  .wrapper {
+    flex-direction: row;
+    overflow: hidden;
+  }
+  .menu {
+    overflow: auto;
+  }
+  .main {
+    min-width: 500px;
+    flex: 3;
+  }
+}
